--- a/src/server-stats/package.json
+++ b/src/server-stats/package.json
@@ -4,6 +4,12 @@
   "version": "0.0.0",
   "repository": "websockets/ws",
   "dependencies": {
-    "express": "^4.16.4"
+    "aws-mqtt": "^1.0.0",
+    "aws-sdk": "^2.882.0",
+    "express": "^4.16.4",
+    "mqtt": "^4.2.6",
+    "node-fetch": "^2.6.1",
+    "python-shell": "^2.0.3",
+    "ws": "^7.4.4"
   }
 }
